legacy/additional_testing/gcc_crash_stats/results/gcc482/save_st/pr14475.c-4.8.2-2.out.txt
pr14475.c:5:18: error: field ‘code’ has incomplete type
   enum tree_code code : 8;  
                  ^
